[gd_scene load_steps=6 format=3 uid="uid://ficouvi7huel"]

[ext_resource type="Script" path="res://scenes/main/prefabs/control.gd" id="1_77bnh"]
[ext_resource type="Texture2D" uid="uid://c70mg3b633jpj" path="res://assets/Objects/shop_icon.png" id="2_q5hwp"]
[ext_resource type="Theme" uid="uid://d24s1qif08h56" path="res://themes/light_theme.tres" id="3_kqrxy"]
[ext_resource type="PackedScene" uid="uid://bxf1tkn5jih6v" path="res://prefab/inventory/inventory.tscn" id="5_wo5w6"]
[ext_resource type="Texture2D" uid="uid://drjle1rwmxi5s" path="res://assets/Controls/pause.png" id="7_vfsmh"]

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_77bnh")

[node name="ButtonPause" type="Button" parent="."]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -81.0
offset_right = -31.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("7_vfsmh")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonStore" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -158.0
offset_bottom = 142.0
grow_horizontal = 0
icon = ExtResource("2_q5hwp")
flat = true
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 360.0
offset_bottom = 96.0
theme_override_constants/separation = 10
alignment = 1

[node name="LabelCristais" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_kqrxy")
theme_type_variation = &"hud_label"
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="LabelMoedas" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme = ExtResource("3_kqrxy")
theme_type_variation = &"hud_label"
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Inventory" parent="." instance=ExtResource("5_wo5w6")]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_right = 28.0

[connection signal="pressed" from="ButtonPause" to="." method="_on_button_pause_pressed"]
[connection signal="pressed" from="ButtonStore" to="." method="_on_button_store_pressed"]
[connection signal="store_closed" from="Inventory" to="." method="_on_inventory_store_closed"]
